# ros_ws

./: .gitignore  .gitmodules  Dockerfile  README.md  build.bash  custom_install.bash  init.bash  setup.bash
.github/workflows/: docker-image.yml
bringup/config/: camera_calibration_a.yaml  camera_calibration_b.yaml  drink_cascade.xml
bringup/launch/: basis.launch.py  server.launch.py
install/: local_setup.sh  setup.sh
install/adt/lib/adt/: base_drive_serial_bridge  base_vision_dosen_detector
install/adt/share/adt/: package.bash  package.dsv  package.ps1  package.sh  package.zsh
install/adt_code/lib/adt_code/: arduino_bridge  basis_roboter_demo
install/adt_code/share/adt_code/: package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
install/adt_code/share/adt_code/launch/: basis_roboter_demo.launch.py
install/adt_diffdrive/include/adt_diffdrive/adt_diffdrive/: arduino_comms.hpp  diffbot_system.hpp  visibility_control.h  wheel.hpp
install/adt_diffdrive/share/adt_diffdrive/: adt_diffdrive.xml  local_setup.bash  local_setup.dsv  local_setup.sh  local_setup.zsh  package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
install/adt_diffdrive/share/adt_diffdrive/cmake/: adt_diffdriveConfig-version.cmake  adt_diffdriveConfig.cmake  ament_cmake_export_dependencies-extras.cmake  ament_cmake_export_targets-extras.cmake  export_adt_diffdriveExport.cmake
install/adt_diffdrive/share/adt_diffdrive/config/: diffbot_controllers.yaml
install/adt_diffdrive/share/adt_diffdrive/environment/: ament_prefix_path.dsv  library_path.dsv  path.dsv
install/adt_diffdrive/share/adt_diffdrive/launch/: diffbot.launch.py  view_robot.launch.py
install/adt_diffdrive/share/adt_diffdrive/ros2_control/: diffbot.ros2_control.xacro
install/adt_diffdrive/share/adt_diffdrive/rviz/: diffbot.rviz  diffbot_view.rviz
install/adt_diffdrive/share/adt_diffdrive/urdf/: diffbot.materials.xacro  diffbot.urdf.xacro  diffbot_description.urdf.xacro
install/adt_urdf/lib/adt_urdf/: state_publisher
install/adt_urdf/share/adt_urdf/: package.bash  package.dsv  package.ps1  package.sh  package.zsh
install/adt_urdf/share/adt_urdf/launch/: demo.launch.py  view_basis_roboter.launch.py
install/adt_web/lib/adt_web/: data_provider
install/adt_web/share/adt_web/: package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
install/diffdrive_adt/include/diffdrive_adt/diffdrive_adt/: diffbot_system.hpp  visibility_control.h
install/diffdrive_adt/share/diffdrive_adt/: diffdrive_adt.xml  local_setup.bash  local_setup.dsv  local_setup.sh  local_setup.zsh  package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
install/diffdrive_adt/share/diffdrive_adt/cmake/: ament_cmake_export_dependencies-extras.cmake  diffdrive_adtConfig-version.cmake  (+2 more)
install/ros2_control_demo_example_2/share/ros2_control_demo_example_2/: local_setup.bash  local_setup.dsv  local_setup.sh  local_setup.zsh  package.sh  package.xml  ros2_control_demo_example_2.xml
log/: latest_build  latest_list
src/adt/: package.xml  setup.cfg  setup.py
src/adt/adt/: base_drive_serial_bridge.py  base_vision_dosen_detector.py
src/adt/resource/: base_drive_serial_bridge.ino  base_drive_serial_bridge.py
src/adt_bt/: CMakeLists.txt  package.xml
src/adt_bt/src/: test_node.cpp
src/adt_code/: CMakeLists.txt  package.xml  setup.cfg  setup.py
src/adt_code/adt_code/: arduino_bridge.py  base_roboter_detection.py  basis_roboter_demo.py
src/adt_code/resource/: can_cascade.xml
src/adt_code/src/: arduino_bridge.cpp  basis_roboter_motor_driver.cpp  basis_roboter_motor_manager.cpp  basis_roboter_relay_driver.cpp  service_roboter_motor_driver.cpp
src/adt_code_msg/: CMakeLists.txt  package.xml
src/adt_code_msg/msg/: RelayState.msg
src/adt_code_msg/srv/: ArduinoCommand.srv  RelaySwitch.srv
src/adt_cv/: package.xml  setup.cfg  setup.py
src/adt_cv/adt_cv/: aruco_detection.py  aruco_frame.py  drink_detection.py
src/adt_hardware/: CMakeLists.txt  README.md  adt_hardware.xml  package.xml
src/adt_hardware/bringup/launch/: diffbot.launch.py
src/adt_hardware/description/launch/: view_robot.launch.py
src/adt_hardware/description/ros2_control/: diffbot.ros2_control.xacro
src/adt_hardware/description/urdf/: diffbot.urdf.xacro
src/adt_hardware/doc/: userdoc.rst
src/adt_hardware/hardware/: basis_motor_bridge.cpp  diffbot_system.cpp
src/adt_hardware/hardware/include/adt_hardware/: basis_motor_bridge.hpp  diffbot_system.hpp  visibility_control.h
src/adt_hardware/test/: test_urdf_xacro.py  test_view_robot_launch.py
src/adt_interfaces/: CMakeLists.txt  package.xml
src/adt_urdf/: package.xml  setup.cfg  setup.py
src/adt_web/: LICENSE  setup.cfg  setup.py
src/adt_web/adt_web/: data_provider.py
(+31 files in other folders)
